# eqsp

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .vale.ini  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  paper.bib  paper.md  pyproject.toml  ruff.toml  run_all_doctests.py  run_coverage.sh  verify_all.py
.agents/workflows/: maintenance_infrastructure.md  verify.md
.github/ISSUE_TEMPLATE/: beta_feedback.md  bug_report.md
.github/workflows/: ci.yml
benchmarks/: run_benchmarks.py  run_benchmarks_even.py
benchmarks/src/: __init__.py  benchmark_area_error.py  benchmark_area_error_even.py  benchmark_core.py  benchmark_energy_dist.py  benchmark_energy_dist_even.py  benchmark_eq_regions.py  benchmark_eq_regions_even.py  benchmark_histograms.py  benchmark_histograms_even.py  benchmark_mindist.py  benchmark_mindist_even.py  benchmark_sradius.py  run_benchmarks.py
doc/: benchmarks.md  book_series_outline.md  conf.py  core_concepts.md  design_and_architecture.md  doctest_coverage_report.md  documentation_maintenance.md  even_collar_partitions.md  index.rst  installation.md  maintainer.rst  maintenance_guide.md  performance.md  performance_expectations.md  phd-thesis-examples.md  porting_guide.md  practical_usage.md  python_environments.md  quality_policy.md  references_vol1.md  references_vol2.md  release_roadmap.md  symmetric_partitions.md  testing_guide.md  use_cases.md  user.rst  user_guide.md  user_migration_guide.md  visualization_guide.md
doc/_static/: custom.css
doc/_templates/: layout.html
doc/api/: eqsp.rst  modules.rst
doc/ci_scripts/: __init__.py  check_links.py  quality_check.py  upload_sourceforge.py
doc/internal/: algorithmic_optimizations.md  book_series_outline.md  maintenance_implementation_checklist.md  pr_checklist.md  release_notes_0_99_3.md  release_notes_0_99_4.md  release_notes_0_99_6.md  release_notes_0_99_7.md  release_roadmap.md  reproduction_setup.md  technical_symmetry.md  testing_details.md  upload_guide.md  venv_sys_setup.md
doc/maint/: quality_check.py  upload_sourceforge.py
doc/maintainer/: algorithmic_optimizations.md  benchmarks.md  design_and_architecture.md  documentation_maintenance.md  maintenance_implementation_checklist.md  pr_checklist.md  release_notes.md  release_roadmap.md  technical_symmetry.md  testing_details.md  upload_guide.md
doc/scripts/: check_links.py  quality_check.py
doc/user/: core_concepts.md  even_collar_partitions.md  installation.md  migration_matlab.md  performance_expectations.md  phd-thesis-examples.md  practical_usage.md  quality_policy.md  references_vol1.md  reproduction_setup.md  use_cases.md  venv_sys_setup.md  visualization_guide.md
eqsp/: __init__.py  histogram.py  histograms.py  illustrate_eq_algorithm.py  illustration_options.py  illustrations.py  illustrations_mayavi.py  partition_options.py  partitions.py  partitions_private.py  partitions_private_again.py  point_set_props.py  region_props.py  utilities.py  visualizations.py
eqsp/_private/: _histograms.py  _partitions.py  _region_props.py
eqsp/utilities.old/: __init__.py  area_of_cap.py
examples/phd-thesis/: regenerate_figures.py
examples/user-guide/: README.md
prompts/: prompt-0.txt  prompt-1.txt  prompt-2.txt  prompt-3.txt  prompt-4.txt  prompt-5.txt
release/: build_dist.py  pypi_readme_fix.py  upload_release.py  upload_sourceforge.py
scripts/: build_dist.py  compute_readability.py  pypi_readme_fix.py  upload_release.py
tests/: inspect_illustrations.py  inspect_visualizations.py  run_coverage.py  run_coverage.sh  test_histograms.py  test_illustrations_extra.py  test_illustrations_mock.py  test_partitions.py  test_point_set_props.py  test_region_props.py  test_utilities.py  test_visualizations_mock.py
thesis-examples/: .pylintrc  fig_3_3_algorithm_s3_99.py  fig_3_4_max_diam_s2.py  fig_3_6_max_diam_s4.py  fig_3_7_max_diam_multi_dim.py  fig_4_10_eqp_voronoi_s2_33_3d.py  fig_4_2_min_dist_s2.py  fig_4_5_packing_s2.py  fig_4_7_packing_s4.py  fig_4_8_wyner_s2_s3_s4.py  fig_5_1_5_2_normalized_energy.py  fig_5_4_energy_coeff_s3.py
validation/: check_links.py  compute_readability.py  quality_check.py  verify_all.py
(+57 files in other folders)
